// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEETER $WIDTHS ## NATIVE ## 01 empty 1`] = `
Array [
  Object {
    "color": "green @[0]",
  },
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 02 simple 1`] = `
Array [
  Object {
    "color": "red @/$width",
  },
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 01: native, 300 1`] = `
Array [
  Object {
    "color": "red @/$width",
  },
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 01: native, 300 2`] = `
Object {
  "color": Object {
    "tracePath": "/$width",
    "value": "red",
  },
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 01: native, 300 3`] = `
Object {
  "color": "red",
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 02: native, 640 1`] = `
Array [
  Object {
    "color": "green @/$width",
  },
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 02: native, 640 2`] = `
Object {
  "color": Object {
    "tracePath": "/$width",
    "value": "green",
  },
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 02: native, 640 3`] = `
Object {
  "color": "green",
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 03: native, 1024 1`] = `
Array [
  Object {
    "color": "blue @/$width",
  },
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 03: native, 1024 2`] = `
Object {
  "color": Object {
    "tracePath": "/$width",
    "value": "blue",
  },
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 03: native, 1024 3`] = `
Object {
  "color": "blue",
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 04: native, undefined 1`] = `null`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 04: native, undefined 2`] = `null`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 04: native, undefined 3`] = `undefined`;

exports[`SHEETER $WIDTHS ## WEB ## 01 empty 1`] = `
Array [
  Array [
    ".a { color:green } @[0]",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 02 simple 1`] = `
Array [
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).a { color:red } @/$width",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 01: native, 300 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red } @/$width",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue } @/$width",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 01: native, 300 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue } @/$width",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  "@media (max-width: 639px).a { color:red } @/$width",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 01: native, 300 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 02: native, 640 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red } @/$width",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue } @/$width",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 02: native, 640 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue } @/$width",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  "@media (max-width: 639px).a { color:red } @/$width",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 02: native, 640 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 03: native, 1024 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red } @/$width",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue } @/$width",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 03: native, 1024 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue } @/$width",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  "@media (max-width: 639px).a { color:red } @/$width",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 03: native, 1024 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 04: native, undefined 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red } @/$width",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue } @/$width",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 04: native, undefined 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue } @/$width",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green } @/$width",
  "@media (max-width: 639px).a { color:red } @/$width",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 04: native, undefined 3`] = `"c b a"`;
